fixed rentcafe floor plan grid view layout on tablet

--- a/src/scss/parts/acf/_rentcafe-floorplans.scss
+++ b/src/scss/parts/acf/_rentcafe-floorplans.scss
@@ -40,7 +40,7 @@
       justify-content: center !important;
       padding: $bodyPadding7 0;
   
-      @include respond-to(tablet) {
+      @include respond-to(desktop) {
         flex-direction: row;
         justify-content: space-between !important;
       }
